Fix: overflow issue over flexbox element

--- a/src/Components/Charts/chartView.scss
+++ b/src/Components/Charts/chartView.scss
@@ -1,6 +1,7 @@
 .chartView__controls{
-        display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    gap: .5rem;
+    gap: 0.5rem;
+    padding: .5rem;
 }
