--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -7,7 +7,7 @@
   // COLORS
   --text-primary: #595959;
   --text-secondary: #ffffffb0;
-  --text-danger: #ff5b4f;
+  --text-danger: #ff6b8c;
 
   // FONT-SIZES
   --fs-small: 12px;
